# sium-package

./: README.md  pyproject.toml
src/sium/: example.py  server.py
src/sium.egg-info/: PKG-INFO  SOURCES.txt
