[project]
name = "sium"
version = "0.0.2"
authors = [
  { name="The Volpinia Team", email="evaxthefoxofficial@gmail.com" },
]
description = "The Sium Package."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/EvaxTheFox/sium-package"
"Bug Tracker" = "https://github.com/EvaxTheFox/sium-package/issues"